--- a/PokerFace_BE/src/main/resources/application.yml
+++ b/PokerFace_BE/src/main/resources/application.yml
@@ -1,1 +1,21 @@
-spring.application.name=PokerFace
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/memorized?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+    username: root
+    password: your_password
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        format_sql: true
+    show-sql: true
+
+server:
+  port: 8080
+
+logging:
+  level:
+    org.hibernate.SQL: debug
