--- a/PokerFace_BE/src/main/resources/application.yml
+++ b/PokerFace_BE/src/main/resources/application.yml
@@ -5,6 +5,10 @@ spring:
     password: your_password
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+
   jpa:
     hibernate:
       ddl-auto: update
