feat: 책 정보 등록 api 구현

--- a/PokerFace_BE/src/main/resources/application.yml
+++ b/PokerFace_BE/src/main/resources/application.yml
@@ -35,3 +35,9 @@ cloud:
       static: ap-northeast-2
     stack:
       auto: false
+
+# Book API Configuration
+book:
+  api:
+    url: https://www.googleapis.com/books/v1/volumes
+    key: ${GOOGLE_BOOKS_API_KEY:} # 환경변수로 설정하거나 직접 입력
