--- a/PokerFace_BE/src/main/resources/application.yml
+++ b/PokerFace_BE/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/memorized?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
     username: root
-    password: your_password
+    password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 springdoc:
